2004-11-23	Benedikt Meurer <benny@xfce.org>

	* terminal/main.c: Mutli-head fixes.
	* configure.ac, terminal/terminal-app.c: Use new class ExoXsessionClient
	  for session management support.

2004-11-22	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c, terminal/terminal-preferences-dialog.c,
	  terminal/terminal-preferences.h, terminal/terminal-preferences.c:
	  Updated to use ExoBinding instead of ExoPropertyProxy.
	* configure.ac: Updated version to 0.2.0svn. Depend on libexo 0.2.0.
	* po/: Updated translations.
	* TODO, terminal/terminal-app.c, configure.ac: Added session
	  management support, based on the X11R5 session management protocol.

2004-11-22	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c: Use ASCII DEL for backspace binding
	  by default.

2004-11-22	Benedikt Meurer <benny@xfce.org>

	* terminal/configure.ac, terminal/terminal-window.c,
	  terminal/Makefile.am: Startup notification support is optional
	  now.
	* terminal/main.c(usage): Update --help output.
	* terminal/terminal-app.c, terminal/terminal-options.h,
	  terminal/terminal-options.c, terminal/terminal-window.c,
	  terminal/terminal-toolbars-view.c:
	  Added multi-screen and multi-display support.
	* terminal/terminal-options.h, terminal/terminal-options.c,
	  terminal/terminal-widget.c, terminal/terminal-widget.h,
	  terminal/terminal-window.c, terminal/terminal-window.h:
	  Prepare for session management support.

2004-11-22	Benedikt Meurer <benny@xfce.org>

	* terminal/Makefile.am: Include terminal-config.h.in in dist.
	* TODO: Added note about optional startup notification dependency.

2004-11-21	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-enum-types.c, terminal/terminal-preferences.h: Erase
	  binding numbers where wrong (ASCII DEL was ASCII backspace, etc.).
	  This should fix bug #20.
	* terminal/terminal-tab-header.h, terminal/terminal-tab-header.c,
	  terminal/terminal-window.c: Terminal title can be changed by