@@ -5,6 +5,30 @@ Terminal uses the bug tracking system at http://bugs.os-cillation.de/
 hosted and maintained by os-cillation.
 
 
+Patches
+=======
+
+Please submit patches to the os-cillation bug tracking system or to the
+people listed in the AUTHORS file. Your patch should be in unified diff
+format (the -u option to GNU diff).
+
+Please and send a patch against a recent version of this package. Patches
+against the Subversion trunk branch are most preferable. You can always
+access the trunk branch from 
+
+  https://os-cillation.com:8080/websvn/listing.php?repname=terminal
+
+
+Feature requests
+================
+
+Please file feature requests to the os-cillation bug tracking system
+(http://bugs.os-cillation.com, product Terminal) with a Severity of
+enhancement. Make sure that your feature request wasn't reported already
+before; requesting a feature several times won't increase the chance
+that it gets added.
+
+
 Coding Style
 ============
 
@@ -22,7 +46,7 @@ Release process
 
   1) Check out a fresh copy from Subversion
   2) Increment the version number in configure.ac
-  3) Update NEWS and ChangeLog, and don't forget to add an entry
+  3) Update NEWS, README and ChangeLog, and don't forget to add an entry
      ("Released x.y.z") to ChangeLog, so people can see which changes
      were before and after a given release.
   4) Update doc/*/Terminal.xml. Also update the figures in doc/*/images
