@@ -1,3 +1,37 @@
+What is it?
+===========
+
 This is the Terminal emulator application. Terminal is a lightweight and
-easy to use terminal emulator for the X windowing system. See the online
-documentation for more information.
+easy to use terminal emulator for the X windowing system, with some new
+ideas and features that makes it unique among X terminal emulators.
+
+
+Installation
+============
+
+The file 'INSTALL' contains generic installation instructions.
+
+
+Performance issues
+==================
+
+Terminal is based on the Vte terminal widget library, just like gnome-terminal.
+Vte is probably not the fastest terminal emulation library on earth, but its
+one of the best when it comes to Unicode support, and not to forget, its
+actively developed. That said, performance is still an important issue for
+a terminal emulator and Vte with font-antialiasing enabled can be very slow
+even on decent systems. Terminal therefore offers the possibility to explicitly
+disable anti-aliasing for the terminal font. If you are experiencing problems
+with the terminal rendering speed, you might want to disable the anti-aliasing
+for the terminal font.
+
+
+How to report bugs?
+===================
+
+Bugs should be reported to the os-cillation bug tracking system
+(http://bugs.os-cillation.com, product Terminal). You will need to
+create an account for yourself.
+
+Please read the HACKING file for information on where to send changes
+or bugfixes for this package.
