@@ -1,2 +1,6 @@
 Jasper Huijsmans <jasper@xfce.org>
+ * nl translations
+
+Bernhard Walle <bernhard@bwalle.de>
+ * several bug reports and useful suggestions
 
