@@ -1,5 +1,15 @@
 2004-11-23	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/Makefile.am: Symlink executable 'Terminal' to 'terminal'.
+	* terminal/terminal-window.c, terminal/terminal-preferences.c: Added
+	  confirmation dialog, that pops up when a window with more than one
+	  tab is about to be closed. The confirmation can be disabled from
+	  dialog. This fixes bug #22.
+	* README, HACKING, THANKS: Improved these documents.
+	* terminal/terminal-preferences.c: Flush pending writes on dispose.
+
+2004-11-23	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/main.c: Mutli-head fixes.
 	* configure.ac, terminal/terminal-app.c: Use new class ExoXsessionClient
 	  for session management support.
